--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
-    "hono": "^4.6.19"
+    "@prisma/client": "^6.2.1",
+    "hono": "^4.6.19",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
