--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -10,5 +10,6 @@
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": ["src/**/*"]
 }
