--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,15 +4,28 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "db": "npx prisma db push && npx prisma generate"
   },
   "dependencies": {
+    "@api/paymaya": "file:.api/apis/paymaya",
     "@hono/node-server": "^1.13.7",
+    "@hono/zod-validator": "^0.4.3",
     "@prisma/client": "^6.2.1",
-    "hono": "^4.6.19",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.48.1",
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
+    "hono": "^4.7.2",
+    "http-status-codes": "^2.3.0",
+    "paymongo-node": "^10.17.0",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1",
     "typescript": "^5.7.3"
