--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,6 @@
     "db": "npx prisma db push && npx prisma generate"
   },
   "dependencies": {
-    "@api/paymaya": "file:.api/apis/paymaya",
     "@hono/node-server": "^1.13.7",
     "@hono/zod-validator": "^0.4.3",
     "@prisma/client": "^6.2.1",
@@ -22,7 +21,8 @@
     "paymongo-node": "^10.17.0",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@packages/shared": "workspace:*"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
