--- a/package.json
+++ b/package.json
@@ -7,25 +7,31 @@
     "packages/*",
     "apps/*"
   ],
-  "packageManager": "pnpm@8.6.0",
+  "packageManager": "bun@1.1.4",
   "scripts": {
-    "dev:client": "pnpm --filter @apps/client dev",
-    "dev:server": "pnpm --filter @apps/server dev",
-    "build:client": "pnpm --filter @apps/client build",
-    "build:server": "pnpm --filter @apps/server build",
-    "db": "pnpm --filter @apps/server db && pnpm --filter @apps/client db",
-    "package": "pnpm run build --filter @packages/shared",
+    "dev:client": "bun --filter @apps/client dev",
+    "dev:server": "bun --filter @apps/server dev",
+    "build:client": "bun --filter @apps/client build",
+    "build:server": "bun --filter @apps/server build",
+    "db": "bun --filter @apps/server db && bun --filter @apps/client db",
+    "package": "bun run build --filter @packages/shared",
     "dev": "turbo run dev --parallel",
     "build": "turbo run build",
     "lint": "turbo run lint",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "start": "turbo run start --parallel"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@tanstack/react-query": "^5.67.2",
+    "add": "^2.0.6",
+    "collapsible": "^1.0.1",
     "framer-motion": "^12.4.7",
     "hono": "^4.6.19",
+    "shadcn": "2.4.0-canary.9",
     "zod": "^3.24.2"
   },
   "devDependencies": {
