--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -29,6 +29,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.67.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -36,6 +37,7 @@
     "embla-carousel-react": "^8.5.2",
     "hono": "^4.7.1",
     "input-otp": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
