--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db": "prisma db push && prisma generate"
+    "db": " prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@packages/shared": "workspace:*",
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -30,20 +29,23 @@
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.67.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@workspaces/shared": "workspace:*",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "hono": "^4.7.1",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.3.0",
     "next-themes": "^0.4.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "sonner": "^1.7.4",
@@ -56,13 +58,18 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.1",
+    "@types/react-dom": "19.1.2",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "15.3.0",
     "postcss": "^8",
     "prisma": "^6.3.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/bun": "latest"
+  },
+  "overrides": {
+    "@types/react": "19.1.1",
+    "@types/react-dom": "19.1.2"
   }
 }
