--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@hono/zod-validator": "^0.4.3",
-    "@packages/shared": "workspace:*",
+    "@workspaces/shared": "workspace:*",
     "@prisma/client": "^6.2.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
