--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "@packages/shared",
+  "name": "@workspaces/shared",
   "version": "1.0.0",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "workspaces": [
-    "apps/client",
-    "apps/server"
-  ],
   "files": [
     "dist"
   ],
