--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "build:client": "bun --filter @apps/client build",
     "build:server": "bun --filter @apps/server build",
     "db": "bun --filter @apps/server db && bun --filter @apps/client db",
+    "db:server": "bun --filter @apps/server db",
     "package": "bun run build --filter @packages/shared",
     "dev": "turbo run dev --parallel",
-    
     "build": "turbo run build",
     "lint": "turbo run lint",
     "test": "turbo run test",
