--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,6 +24,7 @@
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "redis": "^4.7.0",
+    "resend": "^4.3.0",
     "undici": "^7.4.0",
     "zod": "^3.24.1"
   },
