--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@radix-ui/react-avatar": "^1.1.3",
     "@tanstack/react-query": "^5.67.2",
     "add": "^2.0.6",
+    "clsx": "^2.1.1",
     "collapsible": "^1.0.1",
     "framer-motion": "^12.4.7",
     "hono": "^4.6.19",
+    "mantine-datatable": "^7.17.1",
     "shadcn": "2.4.0-canary.9",
     "zod": "^3.24.2"
   },
