--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,8 @@
     },
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".next/**", "dist/**"]
+      "outputs": [".next/**", "dist/**"],
+      "env": ["DATABASE_URL", "DIRECT_URL"]
     },
     "lint": {
       "cache": false
