--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.0",
@@ -50,11 +51,13 @@
     "next": "^15.3.0",
     "next-themes": "^0.4.4",
     "react": "19.1.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "sonner": "^1.7.4",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5",
