--- a/turbo.json
+++ b/turbo.json
@@ -1,32 +1,32 @@
 {
-    "$schema": "https://turbo.build/schema.json",
-    "tasks": {
-        "dev": {
-            "cache": false,
-            "persistent": true
-        },
-        "start": {
-            "cache": false,
-            "persistent": true
-        },
-        "build": {
-            "dependsOn": [
-                "^build"
-            ],
-            "outputs": [
-                ".next/**",
-                "dist/**"
-            ],
-            "env": [
-                "DATABASE_URL",
-                "DIRECT_URL"
-            ]
-        },
-        "lint": {
-            "cache": false
-        },
-        "test": {
-            "cache": false
-        }
+  "$schema": "https://turbo.build/schema.json",
+  "tasks": {
+    "dev": {
+      "cache": false,
+      "persistent": true
+    },
+    "start": {
+      "cache": false,
+      "persistent": true
+    },
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": [".next/**", "dist/**"],
+      "env": [
+        "NEXT_PUBLIC_SUPABASE_URL",
+        "NEXT_PUBLIC_SUPABASE_ANON_KEY",
+        "DATABASE_URL",
+        "DIRECT_URL",
+        "NEXT_PUBLIC_BASE_URL",
+        "API_URL",
+        "NEXT_PUBLIC_API_UR"
+      ]
+    },
+    "lint": {
+      "cache": false
+    },
+    "test": {
+      "cache": false
     }
+  }
 }
