--- a/turbo.json
+++ b/turbo.json
@@ -13,13 +13,13 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "dist/**"],
       "env": [
-        "NEXT_PUBLIC_SUPABASE_URL",
-        "NEXT_PUBLIC_SUPABASE_ANON_KEY",
         "DATABASE_URL",
         "DIRECT_URL",
+        "NEXT_PUBLIC_API_URL",
         "NEXT_PUBLIC_BASE_URL",
-        "API_URL",
-        "NEXT_PUBLIC_API_UR"
+        "NEXT_PUBLIC_SUPABASE_URL",
+        "NEXT_PUBLIC_SUPABASE_ANON_KEY",
+        "JWT_SECRET"
       ]
     },
     "lint": {
