--- a/turbo.json
+++ b/turbo.json
@@ -19,7 +19,8 @@
         "NEXT_PUBLIC_BASE_URL",
         "NEXT_PUBLIC_SUPABASE_URL",
         "NEXT_PUBLIC_SUPABASE_ANON_KEY",
-        "JWT_SECRET"
+        "JWT_SECRET",
+        "API_URL"
       ]
     },
     "lint": {
